fixed skill spacing

--- a/styles.css
+++ b/styles.css
@@ -539,7 +539,7 @@ input:focus {
 
     .skill {
         width: 190px;
-        margin: 15px 5px;
+        margin: 5px;
     }
 
     #my-projects {
